gccida/g0/init_cumulative_args
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_cumulative_args/src/i386.c:2007:19: error: use of undeclared identifier 'zero_cum_49'
v3 = *( _QWORD *)&zero_cum_49.regno; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_cumulative_args/src/i386.c:2008:40: error: use of undeclared identifier 'zero_cum_49'
*( _QWORD *)&cum->words = *( _QWORD *)&zero_cum_49.words; 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_cumulative_args/src/i386.c:2010:44: error: use of undeclared identifier 'zero_cum_49'
*( _QWORD *)&cum->sse_nregs = *( _QWORD *)&zero_cum_49.sse_nregs; 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_cumulative_args/src/i386.c:2011:20: error: use of undeclared identifier 'zero_cum_49'
cum->maybe_vaarg = zero_cum_49.maybe_vaarg; 
                   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_cumulative_args/src/obj/i386.o] Error 1
